# python_tauri

./: Cargo.toml  LICENSE  build.rs  pyproject.toml  tauri.conf.json
capabilities/: default.json
src/: commands.rs  initialization_script.js  lib.rs  lib.rs.1  python_utils.rs
