[package]
name = "python_tauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_tauri"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.24.0", features = ["extension-module"] }
ctrlc = "3.4.4"
serde_json = "1.0.120"
tauri = { version = "2", features = ["devtools", "image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.39.1", features = ["fs"] }
log = "0.4"
once_cell = "1.21.3"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
